added in gutter feature and some extra organization details. 11/13/25

--- a/OMGen/templates/index.html
+++ b/OMGen/templates/index.html
@@ -57,6 +57,29 @@
         </div>
       </div>
       
+      <!-- Gutter Information -->
+      <div class="card mb-3">
+        <div class="card-header">
+          <h5 class="mb-0">Gutter Information (Optional)</h5>
+        </div>
+        <div class="card-body">
+          <div class="row g-3">
+            <div class="col-sm-4">
+              <label class="form-label">Inlet Count</label>
+              <input type="number" class="form-control" name="inlet_count" placeholder="###">
+            </div>
+            <div class="col-sm-4">
+              <label class="form-label">Inlet Size</label>
+              <input type="text" class="form-control" name="inlet_size" placeholder="#/# X #/#">
+            </div> 
+            <div class="col-sm-4">
+              <label class="form-label">Drawing Number</label>
+              <input type="text" class="form-control" name="drawing_number" placeholder="#####.##">
+            </div>
+          </div>
+        </div>
+      </div>
+      
       <!-- Hidden field to track number of filters -->
       <input type="hidden" name="filter_count" id="filterCount" value="1">
       
